# odf-decrypt

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
odf_decrypt/: apache_odf_decryptor.py  base_odf_decryptor.py  libre_office_odf_decryptor.py
odf_decrypt/tests/: test_decryption.py  test_detector.py
odf_decrypt/tests/resources/password_protected/: aoo_presentation_pw_hello.odp  libreoffice_sample_pw_hello.odt
odf_decrypt/tests/resources/plain/: aoo_formula.odf  aoo_presentation.odp  libre_office_draw.odg  libre_office_presentation.odp
odfdecrypt/: __init__.py  cli.py  exceptions.py
odfdecrypt/decryption/: apache_odf_decryptor.py  libre_office_odf_decryptor.py
odfdecrypt/tests/: test_cli.py
odfdecrypt/tests/resources/password_protected/: aoo_document_pw_hello.odt  aoo_drawing_pw_hello.odg  aoo_formula_pw_hello.odf  libre_office_drawing_pw_hello.odg  libre_office_formular_pw_hello.odf  libre_office_presentation_pw_hello.odp  libre_office_spreadsheet_pw_hello.ods
odfdecrypt/tests/resources/plain/: aoo_drawing.odg  aoo_spreadsheet.ods  libre_office_spreadsheet.ods
